2011-06-27 Gabor Simon <gabor.simon@mailbox.hu>
Support for alignment started

    * src/org/dyndns/fules/ck/CompassKeyboardView.java: support for margins added, 'Align' tag added
    
    * src/org/dyndns/fules/ck/CompassKeyboard.java: handling of  margin preferences added

    * res/values/constants.xml: labels for preferences added

    * res/xml/ck_settings.xml: margin prefs added

2011-06-05 Gabor Simon <gabor.simon@mailbox.hu>
Candidate showing and horizontal displaying improved, missing Macedonian letters added

    * src/org/dyndns/fules/ck/CompassKeyboardView.java: candidates are shown from the beginning of a swipe

    * src/org/dyndns/fules/ck/CompassKeyboard.java: horizontal layout no longer forces fullscreen keyboard

    * res/xml/default_cyrillic.xml: missing letters "ѕ", "ј", "ѓ", "ќ" added

    * res/values/constants.xml: version set to v1.2

2011-06-02 Gabor Simon <gabor.simon@mailbox.hu>
Missing key added, reported error fixed

    * local.properties: reference to new sdk location fixed

    * AndroidManifest.xml, res/values/constants.xml: version increased

    * src/org/dyndns/fules/ck/CompassKeyboardView.java: OutOfBounds error fixed

    * res/xml/default_*.xml: missing ampersand sign added

2011-05-17 Gabor Simon <gabor.simon@mailbox.hu>
Minor bugs fixed
	* src/org/dyndns/fules/ck/CompassKeyboard.java, CompassKeyboardSettings.java: code cleanup

	* src/org/dyndns/fules/ck/FilePicker.java: choiceMode bug fixed

2011-05-16 Gabor Simon <gabor.simon@mailbox.hu>
Layout switching improved

	* AndroidManifest.xml: TextDialogPreference added, typo in the name of FilePickerPreference fixed, version increased

	* src/org/dyndns/fules/ck/CompassKeyboardView.java: 'layout=n' action for keys added, some code cleanup 

	* src/org/dyndns/fules/ck/CompassKeyboard.java: layout handling improved

	* src/org/dyndns/fules/ck/CompassKeyboardSettings.java: layout-related code added

	* src/org/dyndns/fules/ck/FilePickerPreference.java: some code cleanup
	